syntax = "proto3";

package auth;

option go_package = "github.com/kmsdoit/golang-jwt-grpc";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc VerifyToken(VerifyRequest) returns (VerifyResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string error_message = 2;
}

message VerifyRequest {
  string token = 1;
}

message VerifyResponse {
  bool valid = 1;
  string username = 2;
  string error_message = 3;
}